alignment of project corrected

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -774,3 +774,25 @@ input[type=text], input[type=email], select, textarea {
   margin-bottom: 16px;
   resize: vertical
 }
+
+
+.portfolioContentMain .pCol {
+  background-color: #f9f9f9; /* or any other color */
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.pCol h2 {
+  font-size: 1.25rem;
+  margin-bottom: 15px;
+  color: #333;
+}
+
+.pCol p {
+  margin-bottom: 10px;
+  color: #555;
+}
